--- a/src/gui/widgets/pagenym_altlocation.ui
+++ b/src/gui/widgets/pagenym_altlocation.ui
@@ -6,9 +6,15 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>417</width>
-    <height>265</height>
+    <width>687</width>
+    <height>383</height>
    </rect>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>800</width>
+    <height>400</height>
+   </size>
   </property>
   <property name="windowTitle">
    <string>WizardPage</string>
