--- a/src/gui/widgets/compose.ui
+++ b/src/gui/widgets/compose.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>513</width>
-    <height>445</height>
+    <width>410</width>
+    <height>418</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -151,7 +151,7 @@
     </layout>
    </item>
    <item row="1" column="0" colspan="2">
-    <widget class="QLabel" name="label_4">
+    <widget class="QLabel" name="subjectLabel">
      <property name="sizePolicy">
       <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
        <horstretch>0</horstretch>
