--- a/src/gui/widgets/detailedit.ui
+++ b/src/gui/widgets/detailedit.ui
@@ -60,12 +60,18 @@
          <property name="text">
           <string>Add</string>
          </property>
+         <property name="visible">
+          <bool>false</bool>
+         </property>
         </widget>
        </item>
        <item>
         <widget class="QPushButton" name="deleteButton">
          <property name="text">
           <string>Delete</string>
+         </property>
+         <property name="visible">
+          <bool>false</bool>
          </property>
         </widget>
        </item>
