Added buttons for Justus to main Activity screen.
Signed-off-by: FellowTraveler <F3llowTraveler@gmail.com>

--- a/src/gui/resource.qrc
+++ b/src/gui/resource.qrc
@@ -64,5 +64,6 @@
         <file>icons/timer.png</file>
         <file>icons/green_dot.png</file>
         <file>icons/red_dot.png</file>
+        <file>icons/gear.jpg</file>
     </qresource>
 </RCC>
