Fixed to maintain selection on accounts/convo tabs. Also added draft functionality and other fixes.
Signed-off-by: FellowTraveler <F3llowTraveler@gmail.com>

--- a/src/gui/ui/activity.ui
+++ b/src/gui/ui/activity.ui
@@ -184,6 +184,13 @@
                </widget>
               </item>
               <item>
+               <widget class="QToolButton" name="toolButtonInvite">
+                <property name="text">
+                 <string>Invite</string>
+                </property>
+               </widget>
+              </item>
+              <item>
                <widget class="QToolButton" name="toolButtonPayContact">
                 <property name="text">
                  <string>Pay</string>
