latest updates ripping out the recordlist
Signed-off-by: FellowTraveler <F3llowTraveler@gmail.com>

--- a/src/gui/ui/activity.ui
+++ b/src/gui/ui/activity.ui
@@ -153,6 +153,15 @@
             </widget>
            </item>
            <item>
+            <widget class="QTreeWidget" name="treeWidgetSummary">
+             <column>
+              <property name="text">
+               <string notr="true">1</string>
+              </property>
+             </column>
+            </widget>
+           </item>
+           <item>
             <widget class="QWidget" name="widgetActions" native="true">
              <property name="sizePolicy">
               <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
@@ -317,6 +326,7 @@
            </layout>
           </widget>
          </widget>
+         <widget class="QTableWidget" name="tableWidgetPayments"/>
         </widget>
        </item>
       </layout>
