--- a/src/gui/ui/activity.ui
+++ b/src/gui/ui/activity.ui
@@ -177,65 +177,7 @@
            </item>
           </layout>
          </widget>
-         <widget class="QTabWidget" name="tabWidgetTransactions">
-          <property name="minimumSize">
-           <size>
-            <width>100</width>
-            <height>0</height>
-           </size>
-          </property>
-          <property name="tabShape">
-           <enum>QTabWidget::Rounded</enum>
-          </property>
-          <property name="currentIndex">
-           <number>0</number>
-          </property>
-          <widget class="QWidget" name="tabReceived">
-           <attribute name="title">
-            <string>Received</string>
-           </attribute>
-           <layout class="QVBoxLayout" name="verticalLayoutReceived">
-            <property name="leftMargin">
-             <number>0</number>
-            </property>
-            <property name="topMargin">
-             <number>0</number>
-            </property>
-            <property name="rightMargin">
-             <number>0</number>
-            </property>
-            <property name="bottomMargin">
-             <number>0</number>
-            </property>
-            <item>
-             <widget class="QTableView" name="tableViewReceived"/>
-            </item>
-           </layout>
-          </widget>
-          <widget class="QWidget" name="tabSent">
-           <attribute name="title">
-            <string>Sent</string>
-           </attribute>
-           <layout class="QVBoxLayout" name="verticalLayoutSent">
-            <property name="leftMargin">
-             <number>0</number>
-            </property>
-            <property name="topMargin">
-             <number>0</number>
-            </property>
-            <property name="rightMargin">
-             <number>0</number>
-            </property>
-            <property name="bottomMargin">
-             <number>0</number>
-            </property>
-            <item>
-             <widget class="QTableView" name="tableViewSent"/>
-            </item>
-           </layout>
-          </widget>
-         </widget>
-         <widget class="QTableWidget" name="tableWidgetPayments"/>
+         <widget class="QTableView" name="tableViewPayments"/>
         </widget>
        </item>
       </layout>
